--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -1,5 +1,5 @@
 
-<h3>Create User Form</h3>
+<h3>Create User Form - SPLIT</h3>
 <div [hidden]="submitted">
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
