--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<!-- <h2 style="color: blue">JSA - Angular Application!</h2>
+<h2 style="color: blue">JSA - Angular Application!</h2>
 <nav>
 	<a routerLink="user" class="btn btn-primary active" role="button" routerLinkActive="active">Users</a> 
 	<a routerLink="add" class="btn btn-primary active" role="button" routerLinkActive="active">Add</a>
-</nav> -->
+	<a routerLink="listCourses" class="btn btn-primary active" role="button" routerLinkActive="active">List Courses</a>
+</nav> 
 <router-outlet></router-outlet>
