--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -184,7 +184,7 @@
                                     <img src="../assets/resources/images/course-grid-1.jpg" class="img-responsive course-img" alt="">
                                     <a href="course-detail.html" class="course-link"><i class="fa fa-link" aria-hidden="true"></i></a>
                                     <div class="course-detail">
-                                        <h4 class="heading">{{u.sLogUser}}</h4>
+                                        <h4 class="heading">Teste</h4>
                                         <span class="brief">In this course, you learn all advanced techniques and methodologies.</span>
                                         <ul class="course-features">
                                             <li><i class="fa fa-map-marker"></i> California</li>
