--- a/src/assets/resources/css/components.css
+++ b/src/assets/resources/css/components.css
@@ -209,6 +209,12 @@ textarea.form-control, select.form-control{
     position: relative;
 }
 
+.navbar-header-custom{
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .navbar-default .navbar-nav>li>a,
 .navbar-default .navbar-nav>li>a:active,
 .navbar-default .navbar-nav>li>a:focus
@@ -841,7 +847,7 @@ a.readmore{
     border:0;
     border: 1px solid #d7d7d7;
     margin-bottom: 10px;
-   /*  backgroun */
+    backgroun
 }
 
 .accordion-2 .panel-default>.panel-heading{
