--- a/src/assets/resources/css/components.css
+++ b/src/assets/resources/css/components.css
@@ -847,7 +847,7 @@ a.readmore{
     border:0;
     border: 1px solid #d7d7d7;
     margin-bottom: 10px;
-    backgroun
+  	/* backgroun */
 }
 
 .accordion-2 .panel-default>.panel-heading{
