--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -1,42 +1,244 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<h3>Create User Form - SPLIT</h3>
-<div [hidden]="submitted">
-    <form (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="sNamUser">Nome</label>
-        <input type="text" class="form-control" id="sNamUser" required
-        [(ngModel)]="user.sNamUser" name="sNamUser">
-      </div>
-      
-      <div class="form-group">
-        <label for="sLogUser">Login</label>
-        <input type="text" class="form-control" id="sLogUser" required
-        [(ngModel)]="user.sLogUser" name="sLogUser">
-      </div>
-      
-      <div class="form-group">
-        <label for="sPasUser">Senha</label>
-        <input type="password" class="form-control" id="sPasUser" required
-        [(ngModel)]="user.sPasUser" name="sPasUser">
-      </div>
-            
-       <div class="form-group">
-        <label for="dBirUser">Ano de Nascimento</label>
-        <input type="datetime" class="form-control" id="dBirUser" required
-        [(ngModel)]="user.dBirUser" name="dBirUser">
-      </div>
-      
-      <div class="btn-group" >
-      	<button class="btn btn-primary" (click)="goBack()">Back</button>
-      	<button type="submit" class="btn btn-success">Submit</button>
-      </div>
-    </form>
-</div>
+<head>
 
-<div [hidden]="!submitted">
-	<div class="btn-group ">
-    	<h4>You submitted successfully!</h4>
-    	<button class="btn btn-primary" (click)="goBack()">Back</button>
-    	<button class="btn btn-success" (click)="newUser()">Add</button>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>EDUComp - Premium Bootstrap Theme</title>
+
+   
+
+    <!--Google Fonts-->
+    <link href='https://fonts.googleapis.com/css?family=Oswald:300,700,400' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+    <!-- Respond.js and HTML shiv provide HTML5 support in older browsers like IE9 and 8 -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+    <div class="loader-backdrop">
+        <!-- Loader -->
+        <div class="loader">
+            <div class="ball-1"></div>
+            <div class="ball-2"></div>
+        </div>
     </div>
-</div>
+
+
+    <nav class="navbar navbar-default">
+        <!-- Navigation Bar -->
+        <div class="navbar-header-custom">
+            <a class="navbar-brand" href="index.html"><img src="../assets/resources/images/logo.png" alt=""></a>
+            <!-- Replace with your Logo -->
+        </div>
+    </nav>
+    
+
+    <div class="mb-50">
+        <div class="container">
+            <div class="col-md-6 col-xs-offset-3">
+                <div class="newsletter-custom">
+                    <h4 class="newsletter-heading">Stay updated. Subscribe !</h4>
+                    <div [hidden]="submitted">
+    				<form (ngSubmit)="onSubmit()">
+						      <div class="form-group">
+						        <label for="sNamUser">Nome</label>
+						        <input type="text" class="form-control" id="sNamUser" required
+						        [(ngModel)]="user.sNamUser" name="sNamUser">
+						      </div>
+						      
+						      <div class="form-group">
+						        <label for="sLogUser">E-mail</label>
+						        <input type="text" class="form-control" id="sLogUser" required
+						        [(ngModel)]="user.sLogUser" name="sLogUser">
+						      </div>
+						      
+						      <div class="form-group">
+						        <label for="sPasUser">Senha</label>
+						        <input type="password" class="form-control" id="sPasUser" required
+						        [(ngModel)]="user.sPasUser" name="sPasUser">
+						      </div>
+						            
+						       <div class="form-group">
+						        <label for="dBirUser">Ano de Nascimento</label>
+						        <input type="datetime" class="form-control" id="dBirUser" required
+						        [(ngModel)]="user.dBirUser" name="dBirUser">
+						      </div>
+						      
+						         <div class="btn-group" >
+						      	<button class="btn btn-primary btn-block" (click)="goBack()">Back</button>
+						      	<button type="submit" class="btn btn-primary btn-block">Submit</button>
+						      </div>
+						    </form>
+						</div>
+		
+						    
+						 
+						</div>
+						
+										
+						<div [hidden]="!submitted">
+							<div class="btn-group ">
+						    	<h4>You submitted successfully!</h4>
+						    	<button class="btn btn-primary btn-block" (click)="goBack()">Back</button>
+						    	<button class="btn btn-primary btn-block" (click)="newUser()">Add</button>					    	
+						    </div>
+               <!--          <div class="form-group">
+                            <button type="submit" class="btn btn-primary btn-block">Subscribe</button>
+                        </div>
+                    </form> -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+        <div class="clearfix"></div>
+
+        <footer class="footer">
+            <!-- Footer -->
+            <div class="footer-pri">
+                <!-- Primary Footer -->
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-4 footer-widget">
+                            <!-- Footer Widget - Blog -->
+                            <h5 class="heading inverse">Recent <span class="color2">Blog</span></h5>
+                            <ul class="blog-thumbnail">
+                                <li class="entry">
+                                    <!-- Blog Entry Excerpt -->
+                                    <div class="entry-content">
+                                        <h4 class="entry-header"><a href="blog-single.html">What it takes to be National Best ?</a></h4>
+                                        <p class="entry-text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings
+                                            of spring which I enjoy with my whole heart. </p>
+                                    </div>
+                                </li>
+                                <li class="entry">
+                                    <!-- Blog Entry Excerpt -->
+                                    <div class="entry-content">
+                                        <h4 class="entry-header"><a href="blog-single.html">How do we achieve 100% success rate ?</a></h4>
+                                        <p class="entry-text">A wonderful serenity has taken possession of my entire soul, like these sweet mornings
+                                            of spring which I enjoy with my whole heart. </p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-2 footer-widget">
+                            <!-- Footer Widget - Quick Links -->
+                            <h5 class="heading inverse">Quick <span class="color2">Links</span></h5>
+                            <ul class="quick-links">
+                                <li><a href="brief-history.html">Brief History</a></li>
+                                <li><a href="about-educomp.html">About EDUComp</a></li>
+                                <li><a href="course-grid.html">Our Courses</a></li>
+                                <li><a href="teachers.html">Our Teachers</a></li>
+                                <li><a href="upcoming-events.html">Upcoming Events</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-2 footer-widget">
+                            <!-- Footer Widget - Affiliations -->
+                            <h5 class="heading inverse">Affiliations &amp; <span class="color2">Awards</span></h5>
+                            <ul class="affiliations">
+                                <li><img src="../assets/resources/images/university-1.png" class="img-responsive" alt=""></li>
+                                <li><img src="../assets/resources/images/university-2.png" class="img-responsive" alt=""></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-2 footer-widget">
+                            <!-- Footer Widget - Policies -->
+                            <h5 class="heading inverse">Our <span class="color2">Elements</span></h5>
+                            <ul class="quick-links">
+                                <li><a href="icon-boxes.html">Icon Boxes</a></li>
+                                <li><a href="accordion.html">Accordion</a></li>
+                                <li><a href="tables.html">Tables</a></li>
+                                <li><a href="tabs.html">Tabs</a></li>
+                                <li><a href="modals.html">Modals</a></li>
+                                <li><a href="progress-bars.html">Progress Bars</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-2 footer-widget">
+                            <!-- Footer Widget - Contact Info -->
+                            <h5 class="heading inverse">Contact <span class="color2">Us</span></h5>
+                            <address>
+                                <strong>EDUcomp Group Of Institutions</strong>
+                                <span>45th Floor,<br/> Newzek Estate Building,<br/> United Kingdom</span>
+                            </address>
+                            <a href="tel:+4525644563" class="phone"><i class="fa fa-phone fa-fw"></i> +452 564 4563</a>
+                            <a href="mailto:test@example.com" class="email"><i class="fa fa-envelope fa-fw"></i> info@company.com</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-sec">
+                <!-- Secondary Footer -->
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-6 text-center">
+                            <span class="copyright">&copy; Copyright Your Company 2016</span>
+                            <!-- Copyright Text -->
+                        </div>
+                        <div class="col-sm-6 text-center">
+                            <ul class="social">
+                                <!-- Social Media Links -->
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-reddit-alien"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Modal -->
+        <!--
+	 <div class="modal fade" id="modal1" data-open-onload="true" data-open-delay="2500" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <div class="modal-body" style="background-image:url('images/modal-background.jpg'); background-size:cover">
+                    <div class="row">
+                        <div class="col-md-5 pull-right bginverse pt-20 pb-20">
+                            <h4 class="heading">Subscribe to our Newsletter!</h4>
+                            <p>Trust us, you will absolutely love our newletter feed!</p>
+                            <br/>
+                            <form>
+                                <div class="form-group">
+                                    <input id="contact-name" type="text" class="form-control">
+                                    <label for="contact-name">Your Name</label>
+                                </div>
+                                <div class="form-group">
+                                    <input id="contact-email" type="text" class="form-control">
+                                    <label for="contact-email">Email ID</label>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Subscribe</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    -->
+
+        <div id="back"><i class="fa fa-angle-up"></i></div>
+        <!-- Back To Top -->
+
+     
+
+</body>
+
+</html>
