--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
-<h2 style="color: blue">JSA - Angular Application!</h2>
-<nav>
-	<a routerLink="user" class="btn btn-primary active" role="button" routerLinkActive="active">Users</a> 
-	<a routerLink="add" class="btn btn-primary active" role="button" routerLinkActive="active">Add</a>
-	<a routerLink="listCourses" class="btn btn-primary active" role="button" routerLinkActive="active">List Courses</a>
-</nav> 
+<!-- Caso tivesse um navbar único, poderíamos colocar aqui -->
+<!-- Em nosso caminho de aprendizado, entendemos que o Angular com rotas funciona se dedicando a performance do site
+pois quando colocamos no index.html o head ele apenas carregará uma vez durante toda a sessão do usuário e caso tivéssemos
+um componente utilizado em todas as telas sem ter alteração, poderíamos colocar aqui e carregaria também uma únic vez  -->
+<div class="loader-backdrop">
+    <!-- Loader  -->
+    <div class="loader">
+        <div class="ball-1"></div>
+        <div class="ball-2"></div>
+    </div>
+</div>
 <router-outlet></router-outlet>
