--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -113,7 +113,7 @@
                 <div class="col-sm-7 mt-100">
                     <h3 class="heading">Who We <span class="color2">Are</span></h3>
                     <!-- Teste - Current User -->
-                    <h1>Hi {{currentUser.username}}!</h1>
+                    <h1>Hi {{currentUser.sLogUser}}!</h1>
                     <p>EDUComp is a premium education theme. 100% responsive and designed for quick customizations, this is
                         an ideal theme for Schools, Colleges, Universities and other Educational Insitutions.</p>
                     <p>A huge array of new elements coming your way, enjoy lifetime free updates for EDUComp, Buy Now!</p>
