--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,15 +14,15 @@
                 <div class="newsletter-custom">
                     <h2>Login</h2>
                     <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
-                        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
-                            <label for="username">Username</label>
-                            <input type="text" class="form-control" name="username" [(ngModel)]="model.username" #username="ngModel" required />
-                            <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required</div>
+                        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !sLogUser.valid }">
+                            <label for="sLogUser">Username</label>
+                            <input type="text" class="form-control" name="sLogUser" [(ngModel)]="model.sLogUser" #sLogUser="ngModel" required />
+                            <div *ngIf="f.submitted && !sLogUser.valid" class="help-block">Username is required</div>
                         </div>
-                        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
-                            <label for="password">Password</label>
-                            <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" required />
-                            <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
+                        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !sPasUser.valid }">
+                            <label for="sPasUser">Password</label>
+                            <input type="sPasUser" class="form-control" name="sPasUser" [(ngModel)]="model.sPasUser" #sPasUser="ngModel" required />
+                            <div *ngIf="f.submitted && !sPasUser.valid" class="help-block">Password is required</div>
                         </div>
                         <div class="form-group">
                             <button [disabled]="loading" class="btn btn-primary">Login</button>
