--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -195,8 +195,8 @@
                                                 <li><a href="blank.html">Blank Page</a></li>
                                             </ul>
                                         </div>
-                                        <div class="col-lg-3 d-none d-lg-block" style="background: url('images/img-general-3.png') no-repeat bottom / 110%;">
-                                        </div>
+                         <!-- <div class="col-lg-3 d-none d-lg-block" style="background: url('images/img-general-3.png') no-repeat bottom / 110%;"> 
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -540,11 +540,11 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-lg-6 bg-primary nop">
-                                <img src="../assets/resources/images/login-modal.jpg" class="img-fluid" alt="">
+                                <!--<img src="../assets/resources/images/login-modal.png" class="img-fluid" alt=""> -->
                                 <div class="p-40">
                                     <h2 class="bold text-white">Sign up to access your child dashboard.</h2>
                                     <br>
-                                    <a href="login-signup.html" class="btn btn-light">Register</a>
+                                    <a routerLink="add"  role="button" routerLinkActive="active"  class="btn btn-light">Register</a>
                                 </div>
                             </div>
                             <div class="col-lg-6 p-40 bg-white">
