--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -7,7 +7,7 @@
                 <!-- <h3 class="heading">Who We <span class="color2">Are</span></h3> -->
                 <!-- Teste - Current User -->
                 <h1>Hi {{currentUser.sNamUser}}!</h1>
-                <p>Obrigado por trabalhar conosco, vamos trabalhar no nosso crescimento juntos.</p>
+                <p>Obrigado por trabalhar conosco, vamos crescer juntos.</p>
                 <p>Disponibilizamos os melhores cursos de ERP para preparar você para o mercado, apresentamos cursos com valores que cabe no seu bolso.</p>
                 <br />
                 <ul class="list-styled pull-left">
