Criação de Curso
Criação de Curso

--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -17,7 +17,7 @@
                 <div class="clearfix"></div>
                 <br />
                 <!-- Define route to subscribe -->
-                <a routerLink="add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar novo curso<i
+                <a routerLink="course/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar novo curso<i
                         class="fa fa-long-arrow-right"></i></a>
                 <br />
             </div>
