--- a/src/app/course-general/create-course/create-course.component.html
+++ b/src/app/course-general/create-course/create-course.component.html
@@ -1,119 +1,68 @@
 <section class="page-header">
-        <div class="container">
-            <h1 class="heading">Forms</h1>
-            <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active"><a href="#">Forms</a></li>
-            </ul>
-        </div>
-    </section>
+    <div class="container">
+        <h1 class="heading">Curso</h1>
+        <ul class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item active"><a href="#">Curso</a></li>
+        </ul>
+    </div>
+</section>
 
-    <section class="container mt-100">
-        <div class="row">
-            <div class="col-lg-6">
-                <h2 class="heading">Contact <span class="text-primary">Form</span></h2>
-                <form>
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name">
-                        <br>
-                        <label for="email">Email</label>
-                        <input type="text" class="form-control" id="email">
-                        <br>
-                        <label for="subject">Subject</label>
-                        <input type="text" class="form-control" id="subject">
-                        <br>
-                        <label for="message">Message</label>
-                        <textarea id="message" class="form-control"></textarea>
-                        <br>
-                        <label class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" checked="">
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">Check this custom checkbox</span>
-                        </label>
-                        <br><br>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <section class="container mt-100 mb-100">
-        <div class="row">
-            <div class="col-lg-6">
-                <h2 class="heading">Login <span class="text-primary">Form</span></h2>
-                <form>
-                    <label for="name2">Username</label>
-                    <div class="input-group input-group">
-                        <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                        <input id="name2" type="text" class="form-control">
-                    </div>
+<section class="container mt-100">
+    <div class="row">
+        <div class="col-lg-6">
+            <h2 class="heading">Novo <span class="text-primary">Curso</span></h2>
+            <form>
+                <div class="form-group">
+                    <label for="name">Titulo</label>
+                    <input type="text" class="form-control" id="name">
                     <br>
-                    <label for="pass2">Password</label>
-                    <div class="input-group input-group">
-                        <span class="input-group-addon"><i class="fa fa-unlock-alt"></i></span>
-                        <input id="pass2" type="password" class="form-control">
-                    </div>
+                    <label for="horas">Horas</label>
+                    <input type="number" class="form-control" id="horas">
                     <br>
-                    <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" checked="">
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Keep me signed in</span>
-                    </label>
-                    <br><br>
-                    <button class="btn btn-primary">Sign In</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <section class="container mt-100 mb-100">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="heading">Inline <span class="text-primary">Form</span></h2>
-                <form class="form-inline">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="inputUsername2" placeholder="Username">
-                    </div>
-                    <div class="form-group mx-lg-3">
-                        <input type="password" class="form-control form-control" id="inputPassword2" placeholder="Password">
-                    </div>
-                    <label class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input">
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Remember me</span>
-                    </label>
-                    <button type="submit" class="btn btn-primary">Sign in</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <section class="container mt-100 mb-100">
-        <div class="row">
-            <div class="col-lg-6">
-                <h2 class="heading">File <span class="text-primary">Upload</span></h2>
-                <form>
-                    <label for="name2">Upload file</label>
+                    <label for="preco">Preço</label>
+                    <input class="form-control" currencyMask [(ngModel)]="value" />
                     <br>
-                    <label class="custom-file w-100">
-                        <input type="file" id="file" class="custom-file-input" required="">
-                        <span class="custom-file-control"></span>
-                    </label>
-                    <br><br>
-                    <div class="progress">
-                        <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%
-                        </div>
-                    </div>
+                    <label for="message">Descrição</label>
+                    <textarea id="message" class="form-control"></textarea>
                     <br>
-                    <button class="btn btn-primary">Start upload</button>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
-    </section>
+    </div>
+</section>
 
-<section class="mt-100 mb-100">
+<section class="container mt-50 mb-50">
+    <!-- <div class="row"> -->
+        <div class="col-lg-6">
+            <h2 class="heading">Categorização do <span class="text-primary">Curso</span></h2>
+            <form>
+                <div class="form-group">
+                    <label for="categoria">Categoria</label>
+                    <select class="form-control" aria-label="ngSelected demo">
+                        <option id="greet" ng-selected="selected">Greetings</option>
+                        <option id="greet" ng-selected="selected">Greetings!</option>
+                        <option id="greet" ng-selected="selected">Greetings!</option>
+                        <option id="greet" ng-selected="selected">Greetings!</option>
+                    </select>
+                    <br>
+                    <label for="categoria">Dificuldade</label>
+                    <select class="form-control" aria-label="ngSelected demo">
+                        <option id="iniciante" ng-selected="selected">Iniciante</option>
+                        <option id="intermediario" ng-selected="selected">Intermediário</option>
+                        <option id="expert" ng-selected="selected">Avançado</option>
+                    </select>
+                    <br>
+                    <button class="btn btn-primary">Criar Curso</button>
+                    <br>
+                </div>
+            </form>
+        </div>
+    <!-- </div> -->
+</section>
+
+
+<!-- <section class="mt-100 mb-100">
     <div class="container">
         <div class="row flex-row justify-content-center">
             <div class="col-lg-5">
@@ -178,5 +127,4 @@
             </div>
         </div>
     </div>
-</section>
-
+</section> -->
