--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,15 @@
 
-    <section class="container mt-120 mb-40">
+    <section class="page-header">
+        <div class="container">
+            <h1 class="heading">Logon</h1>
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active"><a href="#">Logon</a></li>
+            </ul>
+        </div>
+    </section>
+    
+    <section class="container mt-60">
         <div class="row">
             <div class="container">
                 <div class="row justify-content-center">
@@ -24,7 +34,7 @@
                                     </div>
                                     <div class="form-group">
                                         <button [disabled]="loading" class="btn btn-primary">Login</button>
-                                        <a [routerLink]="['/register']" class="btn btn-link">Register</a>
+                                        <a [routerLink]="['/home/add']" class="btn btn-link">Register</a>
                                     </div>
                                 </form>
                             </div>
