--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -35,7 +35,8 @@
                         <strong class="text-primary">R${{currentCourse.fPriCou}}</strong>
                     </div>
                     <div>
-                        <button kendo-button (click)="pdf.saveAs('invoice.pdf')" class="btn btn-primary">Gerar Certificado</button>
+                        <button kendo-button (click)="pdf.saveAs('invoice.pdf')" class="btn btn-primary">Gerar
+                            Certificado</button>
 
                     </div>
                 </div>
@@ -51,26 +52,26 @@
     </div>
 
     <kendo-pdf-export #pdf paperSize="A4" margin="2cm">
-    <div class="row mt-60">
-        <div class="col-lg-4">
-            <p>Average Pass Rate</p>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-                    style="width: 90%;">
-                    90%
+        <div class="row mt-60">
+            <div class="col-lg-4">
+                <p>Average Pass Rate</p>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
+                        style="width: 90%;">
+                        90%
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4">
-            <p>Level of Hardness</p>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-                    style="width: 80%;">
-                    80%
+            <div class="col-lg-4">
+                <p>Level of Hardness</p>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                        style="width: 80%;">
+                        80%
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- <div class="col-lg-4">
+            <!-- <div class="col-lg-4">
             <p>Average Score</p>
             <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
@@ -79,10 +80,10 @@
                 </div>
             </div>
         </div> -->
-    </div>
+        </div>
     </kendo-pdf-export>
 
-    
+
 
     <section class="container mt-100 mb-100">
         <div class="row">
@@ -105,6 +106,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#t3body4" aria-controls="t3body4" role="tab" data-toggle="tab"><i
+                                class="fa fa-graduation-cap fa-fw"></i> Successful Students</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#t3body5" aria-controls="t3body5" role="tab" data-toggle="tab"><i
                                 class="fa fa-graduation-cap fa-fw"></i> Successful Students</a>
                     </li>
 
@@ -169,6 +174,25 @@
                             among
                             the tall grass by the trickling stream; and, as I lie close to the earth, a thousand
                             unknown plants are noticed by me.</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="t3body5">
+                        <section class="container mt-40 mb-40">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h2 class="heading text-center">Theme Styled <span class="text-primary">Video</span>
+                                        <span class="sub-heading">Seamlessly embed videos wherever you like. Give your
+                                            custom height or width and see the videos adapt themselves. Its that easy!</span>
+                                        <span class="icon-divider"></span>
+                                    </h2>
+                                    <div class="youtube" data-video-id="n1_PSUJCz5I">
+                                        <!-- Replace video id with your video id -->
+                                        <div class="btn-play">
+                                            <i class="fa fa-youtube-play"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </div>
