--- a/src/app/course-general/create-group/create-group.component.html
+++ b/src/app/course-general/create-group/create-group.component.html
@@ -12,29 +12,26 @@
     <div class="row">
         <div class="col-lg-6">
             <h2 class="heading">Novo <span class="text-primary">Grupo</span></h2>
-            <form>
+            <form (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label for="name">Titulo</label>
-                    <!-- <input type="text" class="form-control" id="sNamCou" required [(ngModel)]="course.sNamCou" name="sNamCou"> -->
+                    <input type="text" class="form-control" id="sNamGru" required [(ngModel)]="group.sNamGru" name="sNamGru">
                     <br>
                     <h2 class="heading">Categorização do <span class="text-primary">Curso</span></h2>
                     <label for="categoria">Curso 1</label>
-                    <select name="category" class="form-control" required>
-                        <option value="default">Select category</option>
-                        <option *ngFor="let category of categories" [value]="category.iCodUser">{{ category.sLogUser }}</option>
+                    <select [(ngModel)]="courseOne" name="category" class="form-control" required>
+                        <option *ngFor="let category of categories" [value]="category.iCodCou">{{ category.sNamCou }}</option>
                     </select>
                     <br>
                     <label for="categoria">Curso 2</label>
-                    <select name="category" class="form-control" required>
-                        <option value="default">Select category</option>
-                        <option *ngFor="let category1 of categories" [value]="category1.iCodUser">{{ category1.sLogUser}}</option>
+                    <select [(ngModel)]="courseTwo" name="category" class="form-control" required>
+                        <option *ngFor="let category1 of categories" [value]="category1.iCodCou">{{ category1.sNamCou}}</option>
                     </select>
                     <br>
                     <br>
                     <label for="categoria">Curso 3</label>
-                    <select name="category" class="form-control" required>
-                        <option value="default">Select category</option>
-                        <option *ngFor="let category2 of categories" [value]="category2.iCodUser">{{ category2.sLogUser}}</option>
+                    <select [(ngModel)]="courseThree" name="category" class="form-control" required>
+                        <option *ngFor="let category2 of categories" [value]="category2.iCodCou">{{ category2.sNamCou}}</option>
                     </select>
                     <br>
                     <br>
