--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -179,12 +179,12 @@
                         <section class="container mt-40 mb-40">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <h2 class="heading text-center">Theme Styled <span class="text-primary">Video</span>
+                                    <h2 class="heading text-center">Atividade Exemplo<span class="text-primary"> Video</span>
                                         <span class="sub-heading">Seamlessly embed videos wherever you like. Give your
                                             custom height or width and see the videos adapt themselves. Its that easy!</span>
                                         <span class="icon-divider"></span>
                                     </h2>
-                                    <div class="youtube" data-video-id="bS1fM5G-xEs">
+                                    <div class="youtube" data-video-id="LCRoZ7qWGWA">
                                         <!-- Replace video id with your video id -->
                                         <div class="btn-play">
                                             <i class="fa fa-youtube-play"></i>
