--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -78,11 +78,11 @@
                                 aria-hidden="true"></i></a>
                     </div>
                     <div class="course-detail">
-                        <h4 class="heading">{{course.iCodCou}}</h4>
-                        <span class="brief">In this course, you learn all advanced techniques and methodologies.</span>
+                        <h4 class="heading">{{course.sNamCou}}</h4>
+                        <h5 class="heading"><span class="text-primary">R$:</span>{{course.fPriCou}},00</h5>
                         <ul class="course-features">
-                            <li><i class="fa fa-map-marker"></i> California</li>
-                            <li><i class="fa fa-clock-o"></i> 1 year</li>
+                            <li><i class="fa fa-map-marker"></i>{{course.category.sNamCat}}</li>
+                            <li><i class="fa fa-clock-o"></i> {{course.fHorCou}}</li>
                         </ul>
                     </div>
                 </div>
