--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="col-lg-12 text-center mt-20">
-                    <a href="course-grid.html" class="btn btn-primary">Ver todos cursos</a>
+                    <a href="home/course/listAll" class="btn btn-primary">Ver todos cursos</a>
                 </div>
             </div>
         </div>
