--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -21,6 +21,16 @@
                 <a routerLink="course/add" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar
                     novo curso<i class="fa fa-long-arrow-right"></i></a>
                 <br />
+                <br>
+                <!-- Define route to subscribe -->
+                <a routerLink="add/group" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar
+                    Grupo<i class="fa fa-long-arrow-right"></i></a>
+                <br />
+                <br>
+                <!-- Define route to subscribe -->
+                <a routerLink="add/activity" class="btn btn-primary btn-sm" role="button" routerLinkActive="active">Criar
+                    Atividade<i class="fa fa-long-arrow-right"></i></a>
+                <br />
             </div>
         </div>
     </div>
