--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -40,13 +40,7 @@
 
                     </div>
                 </div>
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                    which I enjoy with my whole heart. A wonderful serenity has taken possession of my entire soul,
-                    like these sweet mornings of spring which I enjoy with my whole heart.</p>
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                    which I enjoy with my whole heart.</p>
-                <p>I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never
-                    was a greater artist than now.</p>
+                <p>{{currentCourse.sDesCou}}</p>
             </div>
         </div>
     </div>
