--- a/src/app/user-general/users/users.component.html
+++ b/src/app/user-general/users/users.component.html
@@ -37,7 +37,7 @@
     <br />
 </section>
 
-<div class="pt-70 pb-60 bg-light">
+<div class="pt-60 pb-60 bg-light">
     <form>
         <div class="container">
             <div class="row">
@@ -65,7 +65,7 @@
                             <option>Amsterdam</option>
                         </select>
                     </div>
-                </div>
+                </div>                    
                 <div class="col-lg-3">
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-search"></i> Search</button>
@@ -91,7 +91,7 @@
                         <h4 class="heading">{{course.sNamCou}}</h4>
                         <h5 class="heading"><span class="text-primary">R$:</span>{{course.fPriCou}},00</h5>
                         <ul class="course-features">
-                            <li><i class="fa fa-map-marker"></i>{{course.category.sNamCat}}</li>
+                            <!-- <li><i class="fa fa-map-marker"></i>{{course.category.sNamCat}}</li> -->
                             <li><i class="fa fa-clock-o"></i> {{course.fHorCou}}</li>
                         </ul>
                     </div>
