--- a/src/app/course-general/list-course/list-course.component.html
+++ b/src/app/course-general/list-course/list-course.component.html
@@ -1,12 +1,51 @@
 <section class="page-header">
     <div class="container">
-        <h1 class="heading">Lista de Grupo</h1>
+        <h1 class="heading">Course List </h1>
         <ul class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active"><a href="#">Grupos</a></li>
+            <li class="breadcrumb-item active"><a href="#"></a>Course List</li>
         </ul>
     </div>
 </section>
+
+<div class="pt-60 pb-60 bg-light">
+    <form class="course-search">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="form-group">
+                        <input id="search-1" type="text" class="form-control" placeholder="Start typing...">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="form-group">
+                        <select class="form-control">
+                            <option>1 year</option>
+                            <option>2 years</option>
+                            <option>4 years</option>
+                            <option>6 years</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="form-group">
+                        <select class="form-control">
+                            <option>Ontario</option>
+                            <option>London</option>
+                            <option>New York</option>
+                            <option>Amsterdam</option>
+                        </select>
+                    </div>
+                </div>                    
+                <div class="col-lg-3">
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-search"></i> Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
 
 <section class="container mt-100 mb-100">
     <div class="row">
@@ -76,5 +115,28 @@
                 </div>
             </div>
         </a>
+    </div>
+    <div class="row mt-20">
+        <div class="col-lg-12">
+            <nav>
+                <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                        <a class="page-link" href="#">Previous</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">1</a>
+                    </li>
+                    <li class="page-item active">
+                        <a class="page-link" href="#">2</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">3</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">Next</a>
+                    </li>
+                </ul>
+            </nav>                
+        </div>
     </div>
 </section>
